--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.19.0",
     "sweetalert2": "^11.10.1"
